# simple-pe-xx

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.md  ETnoise.py  ETnoise_cam.py  LICENSE  README.md  asimov-blueprint.yaml  cosmology.py  detectors.py  fstat.py  label_lines.py  likelihood.py  localize.py  merger_rate_evolution.py  metric.py  noise_curves.py  noise_curves_cam.py  optional_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  sky.py  sky_ring.py  star_formation_rate_injection.py  stationary_phase.py  testrun.sh
docs/source/: GW150914.rst  citing.rst  conf.py  cosmology.rst  detectors.rst  example_event.rst  fstat.rst  index.rst  install.rst  likelihood.rst  localization.rst  localize.rst  papers.rst  param_est.rst  test.rst  waveforms.rst  zero_noise_injection.rst
examples/: GW150914.py
examples/GW150914/: GW150914.sh  GW150914_L1_asd.txt  config.ini  trigger_parameters.json
examples/GW190412/: config.ini
examples/frames/: known_frames.ini  trigger_time.ini
examples/zero-noise/: avirgo_O4high_NEW.txt  config.ini  injection_params.json  trigger_parameters.json  zero-noise.sh
simple_pe/: ETnoise_cam.py  ETnoise_rnd.py  asimov.py  asimov_template.yml  fstat.py  likelihood_hm.py  metric.py  psd.py
simple_pe/cli/: __init__.py  simple_pe_analysis.py  simple_pe_calculate_snrs.py  simple_pe_convert.py  simple_pe_corner.py  simple_pe_corner_plot.py  simple_pe_datafind.py  simple_pe_filter.py  simple_pe_localization_ellipses.py  simple_pe_network_coverage.py  simple_pe_pipe.py  simple_pe_plot_weights.py  simple_pe_samples.py  simple_pe_sky_coverage.py
simple_pe/cli/localize/: plot_localization_ellipses.py
simple_pe/cosmology/: __init__.py  cosmology.py  merger_rate_evolution.py  star_formation_rate_injection.py
simple_pe/detectors/: ETnoise_cam.py  ETnoise_rnd.py  __init__.py  detectors.py  dets.py  nets.py  network.py  networks.py  noise_curves.py  psd.py
simple_pe/fstat/: __init__.py  fstat.py  fstat_hm.py
simple_pe/io/: io.py
simple_pe/likelihood/: __init__.py  likelihood.py  likelihood_hm.py
simple_pe/localization/: __init__.py  event.py  loc.py  localize.py  sky.py  sky_loc.py
simple_pe/param_est/: __init__.py  filter.py  matches.py  metric.py  metric_no_wf.py  pe.py  peak.py  result.py  snr_time.py
simple_pe/paramest/: metric.py  pe.py  snr_time.py
simple_pe/waveforms/: __init__.py  eccentric.py  parameter_bounds.py  phenom.py  prec_33.py  stationary_phase.py  waveform.py  waveform_modes.py
test/: Ellipses.ipynb  Find best match.ipynb  Localization.ipynb  Simple PE HM prec.ipynb  Simple PE Precession Example.ipynb  Simple PE example.ipynb  Spin measurement.ipynb  Testing SimplePE metric.ipynb  Testing SimplePESamples.ipynb
