[metadata]
name = simple-pe
version = 0.0.1
author = Stephen Fairhurst
author_email = stephen.fairhurst@ligo.org
description = A package to do simple GW parameter estimation
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://git.ligo.org/stephen-fairhurst/simple-pe"
classifiers =
        Programming Language :: Python :: 3,
        License :: OSI Approved :: MIT License,
        Operating System :: OS Independent,

[options]
packages = find:
python_requires = >=3.6
setup_requires =
	setuptools >= 38.2.5
	setuptools_scm
	wheel
install_requires =
        astropy>=3.2.3
        h5py
        lalsuite
        numpy>=1.15.4
        mpmath
        scipy
        sympy
        pycbc

[options.entry_points]
console_scripts =
	simple_pe_filter = simple_pe.cli.simple_pe_filter:main
	simple_pe_analysis = simple_pe.cli.simple_pe_analysis:main
